welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:12: error: ';' expected but ',' found.
	if (litMessage()  == "Y") {recule(), recule()}
                                           ^BDRBuggle:13: error: ';' expected but ',' found.
	if (litMessage()  == "X") {recule(), recule(), recule()}	
                                           ^